--- a/src/app/components/blogs/blogs.component.css
+++ b/src/app/components/blogs/blogs.component.css
@@ -5,13 +5,8 @@
     margin-top: 20px;
 }
 
-.button {
-    gap: 50px;
-    margin-bottom: 20px;
-}
-
 .hedar h1 {
-    font-family: Inter, sans-serif;
+    font-family: 'Inter', sans-serif;
     font-size: 40px;
     font-weight: 400;
     line-height: 1.5;
@@ -60,7 +55,7 @@
 }
 
 .card h3 {
-    font-family: Inter, sans-serif;
+    font-family: 'Inter', sans-serif;
     font-size: 25px;
     font-weight: 400;
     line-height: 39.01px;
@@ -71,7 +66,7 @@
 }
 
 .care p {
-    font-family: Inter, sans-serif;
+    font-family: 'Inter', sans-serif;
     font-size: 16px;
     font-weight: 300;
     line-height: 20px;
@@ -80,7 +75,7 @@
 
 
 .card .batt {
-    font-family: Inter, sans-serif;
+    font-family: 'Inter', sans-serif;
     font-size: 16px;
     font-weight: 400;
     line-height: 20.2px;
@@ -93,14 +88,13 @@
 
 /* Media Queries for Responsiveness */
 @media (max-width: 1024px) {
-    .button h1 {
+    .hedar h1 {
         font-size: 30px; /* Adjust heading size for medium screens */
     }
 
-    .button .btn {
+    .hedar .btn {
         width: 100px; /* Adjust button width for medium screens */
         font-size: 16px; /* Adjust font size for medium screens */
-        margin-left: 60px; /* Reduce left margin */
     }
 
     .card h3 {
@@ -113,19 +107,21 @@
 }
 
 @media (max-width: 768px) {
-    .button {
+    .hedar {
         flex-direction: column; /* Stack buttons vertically */
-        align-items: left; /* Center buttons */
-        gap: 10px; /* Reduce gap between buttons */
+        align-items: center; /* Center buttons */
+        gap: 30px; /* Reduce gap between buttons */
     }
 
-    .button h1 {
+    .hedar h1 {
         font-size: 24px; /* Adjust heading size for small screens */
     }
 
-    .button .btn {
-        width: 100%; /* Full width for buttons on small screens */
-        margin-left: 0; /* Remove left margin */
+    .hedar .btn {
+        width: 80%; /* Full width for buttons on small screens */
+        max-width: 100px;
+        margin-top: 20px;
+        margin: 10px auto; /* Center the button and add some vertical spacing */
     }
     
     .card {
@@ -143,13 +139,14 @@
 }
 
 @media (max-width: 480px) {
-    .button h1 {
-        font-size: 20px; /* Further adjust heading size for very small screens */
+    .hedar h1 {
+        font-size: 16px;
     }
 
-    .button .btn {
+    .hedar .btn {
         width: 100%; /* Full width for buttons on very small screens */
-        padding: 10px; /* Adjust padding for smaller buttons */
+        padding: 10px; 
+        max-width: 100px;
     }
     
     .card h3 {
