--- a/src/app/components/guid/guid.component.css
+++ b/src/app/components/guid/guid.component.css
@@ -62,6 +62,7 @@
 /* Media Queries for Responsiveness */
 @media (max-width: 1024px) {
     .header h1 {
+        margin-top: -100px;
         font-size: 30px; /* Adjust heading size for medium screens */
     }
 
@@ -80,22 +81,24 @@
 
 @media (max-width: 768px) {
     .header h1 {
-        font-size: 24px; /* Adjust heading size for small screens */
+        font-size: 20px; /* Adjust heading size for small screens */
     }
 
     .kun h3 {
+        line-height: 1.5;
         font-size: 18px; /* Adjust heading size for small screens */
     }
 
     .kun p {
+        line-height: 1.5;
         font-size: 12px; /* Adjust paragraph size for small screens */
     }
 
     .bttn .btn {
         align-items: center;
         margin-bottom: 10px;
-        width: 30%; /* Adjust button width for small screens */
-        margin-left: 0; /* Remove left margin */
+        width: 80%; 
+        margin-left: 0; 
     }
 
     .main img {
@@ -105,13 +108,13 @@
 
 @media (max-width: 480px) {
     .header h1 {
-        margin-bottom: -40px;
         text-align: center;
         line-height: 1.5;
-        font-size: 20px; /* Further adjust heading size for very small screens */
+        font-size: 16px; /* Further adjust heading size for very small screens */
     }
 
     .kun h3 {
+        margin-top: -10px;
         line-height: 1.5;
         font-size: 12px; /* Further adjust heading size for very small screens */
     }
