--- a/src/app/pages/kundli/kundli.component.html
+++ b/src/app/pages/kundli/kundli.component.html
@@ -1,5 +1,4 @@
 <app-header />
-
 <div class="flex-container">
     <div class="row">
         <div class="col-md-12">
@@ -11,130 +10,137 @@
     <div class="row">
         <div class="col-md-6 ">
             <div class="card1">
-                <p>Kundli is the term used for Birth Chart in Vedic Astrology. Twelve houses of Kundli show ascendant and planet position in various zodiac signs at the time of birth as seen from the place of birth.</p>
+                <p>Kundli is the term used for Birth Chart in Vedic Astrology. Twelve houses of Kundli show ascendant
+                    and planet position in various zodiac signs at the time of birth as seen from the place of birth.
+                </p>
             </div>
         </div>
     </div>
 </div>
-    <div class="main-content" style="display: flex;">
-        <img src="../../../assets/kundli/Replace Image Here (6).png" alt="">
-
-        <div class="form-container" style="padding: 30px;">
-            <h2>Get Your Kundli by Date of Birth</h2>
-            <p>This free Janam Kundali by date of birth and time is effective only when you have exact information.</p>
-            <div class="row">
-                <div class="name" style="display: flex; gap: 20px;">
+<div class="form-container">
+    <div class="row">
+        <div class="col-md-5">
+                <img src="../../../assets/kundli/Replace Image Here (6).png">
+            </div>
+        <div class="col-md-7">
+            <div class="card">
+                <h2>Get Your Kundli by Date of Birth</h2>
+                <p>This free Janam Kundali by date of birth and time is effective only when you have exact information.</p>
+                <div class="row">
+                    <div class="name" style="display: flex; gap: 20px;">
+                        <div>
+                            <p>Full Name</p>
+                            <input placeholder="Enter Full Name" required="" type="text" />
+                        </div>
+                        <div>
+                            <p>Birth Place</p>
+                            <input placeholder="Birth Place" required="" type="text" />
+                        </div>
+                    </div>
+                </div>
+                <div class="date" style="display: flex; gap: 20px; margin-bottom: 30px;">
                     <div>
-                        <p>Full Name</p>
-                        <input placeholder="Enter Full Name" required="" type="text" />
+                        <p> Date of Birth</p>
+                        <input placeholder="Date of Birth" required="" type="date" />
                     </div>
                     <div>
-                        <p>Birth Place</p>
-                        <input placeholder="Birth Place" required="" type="text" />
+                        <p>Time of Birth</p>
+                        <input placeholder="Time of Birth" required="" type="time" />
                     </div>
                 </div>
-            </div>
-            <div class="date" style="display: flex; gap: 20px; margin-bottom: 30px;">
-                <div>
-                    <p> Date of Birth</p>
-                    <input placeholder="Date of Birth" required="" type="date" />
+                <div class="main-container">
+                    <label>
+                        <input name="gender" required="" type="button" value="Male" />
+                        <input name="gender" required="" type="button" value="Female" />
+                        <input name="gender" required="" type="button" value="Others" />
+                    </label>
                 </div>
-                <div>
-                    <p>Time of Birth</p>
-                    <input placeholder="Time of Birth" required="" type="time" />
-                </div>
+                <button class="btn" type="submit" routerLink="/kundlidetails">
+                    Generate Kundli
+                </button>
             </div>
-            <div class="main-container">
-                <label>
-                    <input name="gender" required="" type="button" value="Male" />
-                    <input name="gender" required="" type="button" value="Female" />
-                    <input name="gender" required="" type="button" value="Others" />
-                </label>
+        </div>
+    </div>
+</div>
+<!-- all links  -->
+<div class="header">
+    <div class="nav">
+        <a class="active" href="#">
+            What is a Kundli?
+        </a>
+        <a href="#">
+            Why is Janam Kundali Crucial?
+        </a>
+        <a href="#">
+            How to Get Your Kundli?
+        </a>
+        <a href="#">
+            What Are the Benefits of Janam Kundli?
+        </a>
+        <a href="#">
+            Frequently Asked Questions
+        </a>
+    </div>
+    <hr>
+</div>
+
+<div class="card-container">
+    <div class="row">
+        <div class="col-md-8" style="padding: 20px;">
+            <h2>
+                What is a Kundli or Janam Kundli or Birth chart?
+            </h2>
+            <p>
+                A Janam Kundli, or Birth chart, is like a cosmic blueprint of your life. Vedic astrologers
+                create
+                your
+                Kundali based on your exact birth date, birthplace, and birth time. It's like a roadmap that
+                shows
+                the
+                exact positions of planets, zodiac signs, houses, and all major astrological aspects that
+                were
+                present
+                at the time of your birth. These aspects in your natal or birth chart are considered
+                significant in
+                an
+                astrological analysis.
+            </p>
+            <p>
+                Vedic astrology uses your Kundli chart to interpret your destiny, personality, and strengths
+                and
+                weaknesses. Astrologers can provide insight into various aspects of your life by analyzing
+                your
+                Kundli,
+                including career, relationships, and wealth. Your Janam Kundali can reveal patterns and
+                influences
+                that
+                shape your journey through life. It's like a personalized guidebook based on the alignment
+                of stars
+                and
+                planets when you first entered the world.
+            </p>
+        </div>
+        <div class="col-md-4"
+            style="background-image: url('../../../assets/kundli/Group\ 3465836.png'); background-size: cover; border-radius: 20px; background-position: center; opacity: 1; text-align: left; height: 100%; ">
+            <div class="text">
+                <h3>Connect with an
+                    Astrologer on Call or Chat
+                    for more personalized
+                    detailed predictions.</h3>
+                <button class="btn">View All Astrologers</button>
             </div>
-            <button class="btn" type="submit" routerLink="/kundlidetails">
-                Generate Kundli
-            </button>
         </div>
     </div>
 
-    <!-- all links  -->
-    <div class="header">
-        <div class="nav">
-            <a class="active" href="#">
-                What is a Kundli?
-            </a>
-            <a href="#">
-                Why is Janam Kundali Crucial?
-            </a>
-            <a href="#">
-                How to Get Your Kundli?
-            </a>
-            <a href="#">
-                What Are the Benefits of Janam Kundli?
-            </a>
-            <a href="#">
-                Frequently Asked Questions
-            </a>
-        </div>
+</div>
 
-        <div class="card-container1">
-            <div class="row">
-                <div class="col-md-8" style="padding: 20px;">
-                    <h2 style="color:  rgba(30, 58, 138, 1); font-size: 29px; font-weight: 500; line-height: 49px; ">
-                        What is a Kundli or Janam Kundli or Birth chart?
-                    </h2>
-                    <p style="font-size: 16px;font-family: 'Montserrat', sans-serif;width: 90%;">
-                        A Janam Kundli, or Birth chart, is like a cosmic blueprint of your life. Vedic astrologers
-                        create
-                        your
-                        Kundali based on your exact birth date, birthplace, and birth time. It's like a roadmap that
-                        shows
-                        the
-                        exact positions of planets, zodiac signs, houses, and all major astrological aspects that
-                        were
-                        present
-                        at the time of your birth. These aspects in your natal or birth chart are considered
-                        significant in
-                        an
-                        astrological analysis.
-                    </p>
-                    <p style="font-size: 16px;font-family: 'Montserrat', sans-serif; width: 90%;">
-                        Vedic astrology uses your Kundli chart to interpret your destiny, personality, and strengths
-                        and
-                        weaknesses. Astrologers can provide insight into various aspects of your life by analyzing
-                        your
-                        Kundli,
-                        including career, relationships, and wealth. Your Janam Kundali can reveal patterns and
-                        influences
-                        that
-                        shape your journey through life. It's like a personalized guidebook based on the alignment
-                        of stars
-                        and
-                        planets when you first entered the world.
-                    </p>
-                </div>
-                <div class="col-md-4"
-                    style="background-image: url('../../../assets/kundli/Group\ 3465836.png'); background-size: cover; border-radius: 20px; background-position: center; opacity: 1; text-align: left; height: 100%; ">
-                    <div class="text">
-                        <h3>Connect with an
-                            Astrologer on Call or Chat
-                            for more personalized
-                            detailed predictions.</h3>
-                        <button class="btn">View All Astrologers</button>
-                    </div>
-                </div>
-            </div>
-
-        </div>
-
+<div class="main-section">
+    <div class="section">
+        <app-discoverdaily />
     </div>
-    <div class="main-section">
-        <div class="section">
-            <app-discoverdaily />
-        </div>
 
-        
-        <app-qday />
-        <app-astrologer />
-        <app-footer />
-    </div>
+
+    <app-qday />
+    <app-astrologer />
+    <app-footer />
+</div>
