--- a/src/app/pages/kundli/kundli.component.html
+++ b/src/app/pages/kundli/kundli.component.html
@@ -135,7 +135,7 @@
 </div>
 
 <div class="main-section">
-    <div class="section">
+    <div class="section" style="background: linear-gradient(280.09deg, #F97316 -1.11%, #FACC15 100%);">
         <app-discoverdaily />
     </div>
 
