--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -24,7 +24,7 @@
         <div class="col-md-3">
             <div class="Contact">
                 <h3>Contact Us</h3>
-                <p>bookingcelestial.com</p>
+                <p>{{ email }}</p>
                 <p>(+62) 1234 5678</p>
                 <p>Oak Building 19, North City</p>
             </div>
