--- a/src/app/components/blogs/blogs.component.css
+++ b/src/app/components/blogs/blogs.component.css
@@ -65,7 +65,7 @@
     color: #1E3A8A;
 }
 
-.care p {
+.card p {
     font-family: 'Inter', sans-serif;
     font-size: 16px;
     font-weight: 300;
