--- a/src/app/components/withus/withus.component.css
+++ b/src/app/components/withus/withus.component.css
@@ -6,7 +6,7 @@
 }
 
 .hedar h1 {
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Inter', sans-serif;
     font-size: 40px;
     font-weight: 400;
     line-height: 58.51px;
@@ -45,7 +45,7 @@
 }
 
 .card h3 {
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Inter', sans-serif;
     font-size: 30px;
     font-weight: 400;
     line-height: 39.01px;
@@ -55,13 +55,12 @@
 }
 
 .card p {
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Inter', sans-serif;
 font-size: 16px;
 font-weight: 400;
 line-height: 25.2px;
 text-align: center;
-text-underline-position: from-font;
-text-decoration-skip-ink: none;
+color: grey;
 
 }
 
