--- a/src/app/components/footer/footer.component.css
+++ b/src/app/components/footer/footer.component.css
@@ -37,6 +37,11 @@
 
 }
 
+/* .social-icons {
+    width: 20px;
+    height: 20px;
+} */
+
 .quick {
     margin-left: 20%;
     flex: 1; /* Allow flex to grow */
@@ -53,7 +58,7 @@
 .quick a {
     font-family: 'Inter', sans-serif;
     font-size: 16px;
-    line-height: 24.38px;
+    line-height: 1.5;
     text-align: left;
     text-decoration: none;
     display: flex;
@@ -76,12 +81,11 @@
 .Contact p {
     font-family: 'Inter', sans-serif;
     font-size: 16px;
-    line-height: 24.38px;
+    line-height: 0.8;
     text-align: left;
     text-decoration: none;
     display: flex;
     flex-direction: column;
-    gap: 10px;
 }
 
 .subscribe {
