--- a/src/app/components/guid/guid.component.css
+++ b/src/app/components/guid/guid.component.css
@@ -1,7 +1,11 @@
 .main-container {
     width: 100%;
-    height: aoto;
+    height: auto;
     padding: 50px;
+}
+
+.header{
+    margin-top: -70px;
 }
 
 .header h1 {
